# ParamzinHomeWork

./: App1.cpp  dz1.cpp  dz12.cpp  dz15.cpp  dz2.cpp  dz3.cpp  dz4.cpp  dz5.cpp  dz6.cpp  dz7.cpp
RentalProj/: CMakeLists.txt  ag_rental_base  customersdialog.cpp  customersdialog.ui  groupsdialog.cpp  groupsdialog.h  groupsdialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  orderdialog.cpp  orderdialog.h  orderdialog.ui  productsdialog.cpp  productsdialog.h  productsdialog.ui  rentaldialog.cpp  rentaldialog.h  rentaldialog.ui  sqlhandler.cpp  sqlhandler.h
RentalProj/accessory/: order (копия).cpp  order (копия).h  order.cpp  order.h  rentalitem (копия).cpp  rentalitem (копия).h  rentalitem.cpp  rentalitem.h
RentalProj/rentalAG/: 1_create_user.sql  2_create_db.sql  3_privileges.sql  customersdialog.cpp  customersdialog.h  customersdialog.ui  groupsdialog.cpp  groupsdialog.h  groupsdialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  orderdialog.cpp  orderdialog.h  orderdialog.ui  productsdialog.cpp  productsdialog.ui  rentalAG.pro  rentalAG.pro.user.5e6d0dc  rentalAG.pro.user.9c4586f  rentalAG.pro.user.afde9bf  rentaldialog.cpp  rentaldialog.ui  sqlhandler.cpp  sqlhandler.h
RentalProj/rentalAG/accessory/: comboboxdelegate.cpp  comboboxdelegate.h
RentalProj/rentalAG/build-rentalAG-Desktop_Qt_5_12_12_MinGW_32_bit-Release/: Makefile  Makefile.Debug  Makefile.Release  config.ini  object_script.rentalAG.Debug  object_script.rentalAG.Release  rentalAG_resource.rc  ui_customersdialog.h  ui_groupsdialog.h  ui_mainwindow.h  ui_orderdialog.h  ui_productsdialog.h  ui_rentaldialog.h
RentalProj/rentalAG/build-rentalAG-Desktop_Qt_5_12_12_MinGW_32_bit-Release/release/: moc_customersdialog.cpp  moc_groupsdialog.cpp  moc_mainwindow.cpp  moc_order.cpp  moc_orderdialog.cpp  moc_productsdialog.cpp  moc_rentaldialog.cpp  moc_rentalitem.cpp  moc_sqlhandler.cpp  qrc_images.cpp
dz10/: App1.cpp  App5.cpp
dz11/: App1.cpp  App5.cpp
dz13/: App1.cpp  App2.cpp  App3.cpp
dz14/: App2.cpp  App2.sln  App2.vcxproj  App2.vcxproj.filters  MyClass.cpp  MyClass.h
dz16/: d1.cpp  d2.cpp  d3.cpp
dz17/: dz17.pro  main.cpp  obj.h  person.cpp  person.h  professor.cpp  professor.h  starosta.cpp  starosta.h  student.cpp  student.h  university.cpp  university.h
dz18/: Application1.cpp  Application2.cpp
dz19/: Application1.cpp  Application2.cpp
dz20/: Application1.cpp  Application2.cpp
dz21/: dz21.cpp  dz21.sln  dz21.vcxproj  dz21.vcxproj.filters
dz23/: dz23.cpp  dz23.sln  dz23.vcxproj  dz23.vcxproj.filters
dz24/: dz24.pro  main.cpp  test.xml
dz25/: 14298-zelenaja-tochka.html  dz25.pro  mainwindow.cpp  mainwindow.ui  mainwindow2.ui  res.qrc
dz26/: database
dz27/: database
dz8/: App2.cpp  App3.cpp  App4.cpp
dz9/: App2.cpp  App3.cpp  App4.cpp
(+50 files in other folders)
